--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.1",
     "vue3-cookies": "^1.0.6",
+    "vue3-popper": "^1.5.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
