--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "core-js": "^3.8.3",
+    "core-js": "^3.32.0",
     "moment": "^2.29.4",
-    "vue": "^3.2.13",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.3",
+    "vue-router": "^4.2.4",
     "vue3-carousel": "^0.3.1",
     "vue3-cookies": "^1.0.6",
+    "vue3-dropzone": "^2.0.1",
     "vue3-popper": "^1.5.0",
-    "vuex": "^4.0.0"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@babel/core": "^7.22.9",
+    "@babel/eslint-parser": "^7.22.9",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.63.4",
+    "eslint-plugin-vue": "^8.7.1",
+    "sass": "^1.64.1",
     "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
