--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.32.0",
+    "mitt": "^3.0.1",
     "moment": "^2.29.4",
+    "usemodal-vue3": "^0.3.7",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4",
